--- a/src/App.css
+++ b/src/App.css
@@ -1,59 +1,59 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  border: 0;
-  outline: 0;
-  overflow-x: hidden;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	list-style: none;
+	border: 0;
+	outline: 0;
+	overflow-x: hidden;
 }
 
 :root {
-  --container-width-lg: 80%;
-  --container-width-sm: 90%;
+	--container-width-lg: 80%;
+	--container-width-sm: 90%;
 
-  --primary-color: #f2e2d5;
-  --white-color: #fff;
-  --black-color: #000;
-  --text-color: #737581;
-  --border-color: #c5c7d0;
+	--primary-color: #f2e2d5;
+	--white-color: #fff;
+	--black-color: #000;
+	--text-color: #737581;
+	--border-color: #c5c7d0;
 
-  --transition: all 400ms ease-in;
+	--transition: all 400ms ease-in;
 }
 
 /* GENERAL STYLES */
 
 html {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 body {
-  font-family: "Poppins", sans-serif;
-  line-height: 1.7;
+	font-family: 'Poppins', sans-serif;
+	line-height: 1.7;
 }
 
 .container {
-  width: var(--container-width-lg);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 0 auto;
+	width: var(--container-width-lg);
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 0 auto;
 }
 
 img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
 }
 
 .btn {
-  background: var(--black-color);
-  color: var(--white-color);
-  cursor: pointer;
-  padding: 0.5rem 2rem;
-  transition: var(--transition);
+	background: var(--black-color);
+	color: var(--white-color);
+	cursor: pointer;
+	padding: 0.5rem 2rem;
+	transition: var(--transition);
 }
 
 /* END OF GENERAL STYLES */
@@ -64,7 +64,7 @@ img {
 
 /* MEDIA QUERIES (Phones) */
 @media (max-width: 768px) {
-  .container {
-    width: var(--container-width-sm);
-  }
+	.container {
+		width: var(--container-width-sm);
+	}
 }
